k8s/listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener-service
  template:
    metadata:
      labels:
        app: listener-service
    spec:
      containers:
        - name: listener-service
          image: "jmgdemo.azurecr.us/go-micro/listener-service:1.0.1"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: listener-service

spec:
  selector:
    app: listener-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
