k8s/logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
        - name: logger-service
          image: "jmgdemo.azurecr.us/go-micro/logger-service:1.0.2"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
            - containerPort: 5001
            - containerPort: 50001
---
apiVersion: v1
kind: Service
metadata:
  name: logger-service

spec:
  selector:
    app: logger-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
    - protocol: TCP
      name: rpc-port
      port: 5001
      targetPort: 5001
    - protocol: TCP
      name: grpc-port
      port: 50001
      targetPort: 50001
