k8s/ingress-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-go-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - go-micro.johnmichaelgeorge.com
        - broker.johnmichaelgeorge.com
      secretName: tls-secret-2
  rules:
    - host: go-micro.johnmichaelgeorge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 8081
    - host: broker.johnmichaelgeorge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.johnmichaelgeorge.com
      secretName: tls-secret
  rules:
    - host: www.johnmichaelgeorge.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
