k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /front
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 8081
    - http:
        paths:
          - path: /broker
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8080
